--- a/Assignment #12xxx.ipynb
+++ b/Assignment #12xxx.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Exercise Twelve: Texts, Three Ways\n",
-    "This week was unique as bringing in components (three methods) that were explored previously (topic modeling, sentiment analysis, and Markov chain generation) allowed for the comfort to expand with the enablement of \"the same set of root texts.\"\n",
+    "This week was unique as bringing in components (three methods) that were explored previously (topic modeling, sentiment analysis, and Markov chain generation) allowed for the comfort to expand with the enablement of similar root texts.\n",
     "\n",
     "- Collect and import ten documents (novels work best, but anything goes!)\n",
     "- Using the topic modeling code as a starter, build a topic model of the documents\n",
@@ -13,8 +13,7 @@
     "- Using the Markov chain code as a starter, generate a sentence using one of the documents\n",
     "- Using the Markov chain code as a starter, generate a longer text fragment using all of the documents.\n",
     "\n",
-    "\"The most basic interface is the Command Line Interface. Almost all desktop computers have a “terminal” utility that allows you to work in this \n",
-    "mode\" (Drucker 173). \"An interface is a set of cognitive cues. It may look like a screen full of pictures of things inside the computer, but in fact, the interface mediates between an individual the computational activity\" (Drucker 176)."
+    "And to help push the technical philosophy further and keep the process moving was knowing that \"An interface is a set of cognitive cues. It may look like a screen full of pictures of things inside the computer, but in fact, the interface mediates between an individual the computational activity\" (Drucker 176)."
    ]
   },
   {
@@ -28,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To keep the direction within my perspectives that I have explored during this semester on and off, I brought in Wikipedia subjects pertaining to a diverse director focus in the film and entertainment industry. The API explored Wikipedia, was new and it was warranted to explore and use toward a practice of something off the grid with use of a Python app use for the small query. With use of the path being \"director/\" I was off an running. \"An interface is a zone of exchange. An interface can connect a person with a computer (as with the screens on our devices), a computer with a computer (as in an API), or a network of multiple systems and agents with each other\" (Drucker 172)."
+    "To keep the direction within my API  perspectives explored this semester, I brought in Wikipedia subjects pertaining to a diverse director focus in the film and entertainment industry. This was a new but warranted area to examine due to practicing something off the grid with a Python app toward finding a minor query. With the help of the path being \"director/,\" I was off and running, as \"An interface can connect a person with a computer.., a computer with a computer (as in an API)\" (Drucker 172)."
    ]
   },
   {
@@ -46,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the film industry random gathering of directors that were listed on the Wikipedia correctly to be able to locate.  The interesting component was that Sean Baker included the (filmmaker) tag on it, but still came through on the choices.  The only choice that was not able to come onboard and be documented in Wikipedia correctly was \"Sidney Poitier\". “GLITCH a minor problem – a false or spurious electronic signal - a brief sudden interruption or irregularity” (Benjamin 77). As a result, he had to be replaced with another choice to move forward.  Some, of the code was familiar such as the filename and path that used replacements of spaces and underscores, which became readable toward the process of brining in the list of names and becomeing a defined .txt entity witin the process and file which saved the page content within the directors folder and become a viable entity to explore. \"The notion of “cognitive load” (how much mental work is required) is a consideration for all interface design\" (Drucker 178)."
+    "Using the film industry's random gathering of directors listed on Wikipedia correctly to locate, the interesting component was that Sean Baker included the (filmmaker) tag but still came through on the choices.  The only option that could not come on board and be documented in Wikipedia correctly was \"Sidney Poitier,\" which signified a \"GLITCH... a minor problem – a false or spurious electronic signal - a brief sudden interruption or irregularity\" (Benjamin 77). As a result, he had to be replaced with another choice to move forward.  Some of the code was familiar such as the filename and path that used replacements of spaces and underscores, which became readable toward bringing in the list becoming a defined .txt entity within the process and file.  As a result, it enabled saving page content within the director's folder to become a viable entity to explore. Which enlisted \"The notion of \"cognitive load\" (how much mental work is required) is a consideration for all interface design\" (Drucker 178)."
    ]
   },
   {
@@ -90,7 +89,7 @@
    "source": [
     "## Stage Two: Using the topic modeling code as a starter, build a topic model of the documents\n",
     "\n",
-    "The directors pulled in were now used as a resource toward a viable topic model presentation.  Ranging from \"directors/Adam_Curtis.txt\" to \"directors/Mia_Hansen-Love.txt,\" this journey was accomplished. Whch was stored and represented in the path \"directors/\" which encased file names etc. “Feelings and stories of being surveilled are a form of “evidence,” she insisted, and community testimony is data” (Benjamin 80). \"Interface is always an argument, and combines presentation (form/format), representation (contents), navigation (wayfinding), orientation (location/breadcrumbs), and connections to the network (links and social media). Interfaces are often built on metaphors of windows or desktops, but they also contain assumptions about users\" (Drucker 181).\n"
+    "Topic modeling aided the directors pulled in were now used as a resource toward a viable topic model presentation.  Ranging from \"directors/Adam_Curtis.txt\" to \"directors/Mia_Hansen-Love.txt,\" this journey was accomplished, which was stored and represented in the path \"directors/\" encasing file names. As a result, \"Feelings and stories of being surveilled are a form of evidence\" (Benjamin 80). While an \"Interface is always an argument, and combines presentation (form/format), representation (contents), navigation (wayfinding), orientation (location/breadcrumbs), and connections to the network (links and social media)\" (Drucker 181).\n"
    ]
   },
   {
@@ -145,14 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "17 articles and 17 documents"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "“One of the most iconic scenes from The Matrix film trilogy deals with the power of predictions and self-fulfilling prophecies” (Benjamin 84). "
+    "Enforcing 17 articles/documents oddly coming together with the term matrix found in film as “One of the most iconic scenes from The Matrix film trilogy deals with the power of predictions and self-fulfilling prophecies” (Benjamin 84). "
    ]
   },
   {
@@ -201,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, there was a use to take advantage of a parameter's  topic association with a \"vocabulary element... converting the arrays which hold the parameter estimates into DataFrames  with named rows and columns.  topic_names = [f'Topic {k}' for k in range(100)]  topic_word_distributions = pd.DataFrame(  model.components_, columns=vocabulary, index=topic_names)\" (Karsdorp, Kestemont, Riddell 301). Data frames"
+    "In this section, there was a use to take advantage of a parameter's  topic association with a \"vocabulary element... converting the arrays which hold the parameter estimates into DataFrames with named rows and columns.  topic_names = [f'Topic {k}' for k in range(100)]  topic_word_distributions = pd.DataFrame(  model.components_, columns=vocabulary, index=topic_names)\" (Karsdorp, Kestemont, Riddell 301). "
    ]
   },
   {
@@ -280,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This was an exploratory section where I altered the extraction direction through signification of \"document_topic_distributions.loc\"['Topic's'] (Karsdorp, Kestemont, Riddell 301). Fame and fortune represented with wiki research componenets “The Matrix offers a potent allegory for thinking about power, technology, and society” (Benjamin 84-85). “Black feminist theorist Patricia Hill Collins conceptualized systemic forms of inequality in terms of a “matrix of domination” in which race, class, gender, and other axes of power operated together, “as sites of domination and as potential sites of resistance” (Benjamin 85-86)."
+    "This was an exploratory section where I altered the extraction direction through signification of \"document_topic_distributions.loc\" ['Topic's'] (Karsdorp, Kestemont, Riddell 301). Fame and fortune are represented with wiki research components \"The Matrix offers a potent allegory for thinking about power, technology, and society\" (Benjamin 84-85). "
    ]
   },
   {
@@ -325,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Word cloud -generates some frequencies and sees the visually impactful in the visionary displays -“Practical strategies for finding the maximum likelihood estimates for the parameters in normal mixture models are well-established.  “Expectation maximization” is the most common technique. In this particular setting (i.e., a bivariate normal mixture model with three components), the choice of strategy will not make much of a difference. As the scikit-learn library provides a convenient way of estimating the parameters here, we will use that.  The following lines of code suffice to estimate all the parameters of interest” (Karsdorp, Kestemont, Riddell 291). "
+    "\"Word Cloud\" generates some frequencies and sees the visually impactful visionary displays as practical strategies for finding the maximum parameters in typical mixture models with \"Expectation maximization\" is common. The scikit-learn library provides a convenient way of estimating the parameters here as \"following lines of code suffice to estimate all the parameters of interest\" (Karsdorp, Kestemont, Riddell 291). "
    ]
   },
   {
@@ -499,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"Our recommended solution here is to take account of document length by plotting, for each year, the proportion of all words in all opinions associated  with a given topic. We can, in effect, calculate the total number of words in  all opinions published in a given year associated with a topic by multiplying  opinion lengths by the estimated topic shares. Finally, to make years with different numbers of opinions comparable, we can divide this number by the total  number of words in opinions from that year\" (Karsdorp, Kestemont, Riddell 315). "
+    "The use of \"plotting, for each year,... can, in effect, calculate the total number of words in  all opinions published in a given year associated with a topic by multiplying  opinion lengths by the estimated topic shares\" (Karsdorp, Kestemont, Riddell 315). "
    ]
   },
   {
@@ -571,8 +563,7 @@
    "source": [
     "## Stage Three: Using the sentiment analysis code as a starter, run a sentiment analysis on sample fragments from the documents and compare\n",
     "\n",
-    "level of fandom in wikipedia - and what goes on the page -anaylyser is neutral on wikipedia writers who chose about peole they choose to write about. \n",
-    "\"An interface constructs a narrative\" (Drucker 183)."
+    "The level of fandom in Wikipedia and what goes on the page enabled the analyzer to stand neutral on contributors who chose people they decide to write about as \"An interface constructs a narrative\" (Drucker 183)."
    ]
   },
   {
@@ -606,7 +597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "compound polirity of each article - differences or similarieties of negative or positive sentence components.  filenames we explore and work locally with folders created.  encoding not concerned about errors and send them to documents print them after filenames etc. checking out differences etc. big to small"
+    "Notes: The compounded polarity of each article simulates differences or similarities of negative or positive sentence components. Filenames were explored locally, with folders created.  In the end, encoding is not concerned about errors and send them to documents, printing them after filenames while checking out differences between large or small."
    ]
   },
   {
@@ -672,7 +663,8 @@
    "metadata": {},
    "source": [
     "## Stage Four: Using the Markov chain code as a starter, generate a sentence using one of the documents\n",
-    "documents are in an array, not continueous so we process it generator text \n",
+    "Herewith the use of Markov chain code, a sentence from a document became vivid toward a noncontinuous generated text \n",
+    "\n",
     "\n"
    ]
   },
@@ -694,14 +686,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "then pout text through model they look clean."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\"Interface designs often depend upon cultural practices or conventions that may not be legible to users from another background\" (Drucker 188)."
+    "Text pushed through the model to look clean as benefits of \"Interface designs often depend upon cultural practices or conventions that may not be legible to users from another background\" (Drucker 188)."
    ]
   },
   {
@@ -727,16 +712,9 @@
    "metadata": {},
    "source": [
     "## Stage Five: Using the Markov chain code as a starter, generate a longer text fragment using all of the documents\n",
-    "big momment of generating book novel set up and wht words that follow.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Achieved a significant moment of generating book novel set up and what words that follow. As many interfaces welcome the use of a \"universal\" reader with an \"omniscient\" viewer, \"but no such person exists, and each  individual will respond to the contents and the organization of a site in accord with their own background, experience, and expectations\" (Drucker 190).\n",
     "\n",
-    "\"Most interfaces assume a “universal” reader and an “omniscient” viewer. But no such person exists, and each  individual will respond to the contents and the organization of a site in accord with their own background, experience, and expectations\" (Drucker 190)."
+    "\n"
    ]
   },
   {
@@ -771,21 +749,6 @@
     "\n",
     "print(novel)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bonus Stage: Try to extend this analysis to note other features of these documents using any of our previous exercises as a starting point.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
