--- a/Assignment (Template).ipynb
+++ b/Assignment (Template).ipynb
@@ -25,7 +25,9 @@
    "metadata": {},
    "source": [
     "## Project Overview: NaNoGenMo\n",
-    "This sample project builds on our previous exercises inspired by National Novel Generation Month. It offers a framework for exporing text generation based upon children's literature, inspired by NaNoGenMo's call to think about different forms of procedural making. As such, it is guided by that project's rule: \"Spend the month of November writing code that generates a novel of 50k+ words.\""
+    "This sample project builds on our previous exercises inspired by National Novel Generation Month. It offers a framework for exporing text generation based upon children's literature, inspired by NaNoGenMo's call to think about different forms of procedural making. As such, it is guided by that project's rule: \"Spend the month of November writing code that generates a novel of 50k+ words.\"\n",
+    "\n",
+    "(Replace this text with a short description of what your envisioned project design will accomplish. Include your research question and goals for this analysis.)"
    ]
   },
   {
@@ -33,9 +35,22 @@
    "metadata": {},
    "source": [
     "## Stage One: Dependencies\n",
+    "\n",
     "Add the import code for every dependency of your project: for instance, if you are collecting data, you might import Tweepy or BeautifulSoup. If you're working with a file of folders, import os. Most projects will require Pandas, along with appropriate processing and visualization libraries. In the comments, explain briefly why you are including each library (as shown in the example below.)\n",
     "\n",
+    "\n",
+    "\n",
     "(Karsdorp, Kestemont, and Riddell)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing Pandas to handle collected Twitter data (example comment)\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -73,6 +88,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Collect data using a Tweepy stream (example annotation)\n",
+    "# (Copy and modify code from other exercises to prototype this goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# We'll need to extract our text from our novels, and we'll use regular expressions to start cleaning it of the Gutenberg header and footer \n",
     "\n",
     "up_to_word = \"Contents\"\n",
@@ -102,6 +127,16 @@
     "After your data has been collected or imported, store it in a format that works for your purposes. This can vary: for Twitter analysis, it might be a Pandas dataframe, while for text, you might build a document term matrix.\n",
     "\n",
     "(Karsdorp, Kestemont, and Riddell)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store Twitter data using Pandas with appropriate column names (example comment)\n",
+    "# (Copy and modify code from other exercises to prototype this goal)"
    ]
   },
   {
@@ -151,6 +186,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Compare several account outputs using PCA (example comment)\n",
+    "# (Copy and modify code from other exercises to prototype this goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#We'll start with generating a chapter title function\n",
     "from tracery.modifiers import base_english\n",
     "rules = {\n",
@@ -166,59 +211,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This is an old prototype bot of mine - you'd want to write a new Tracery program\n",
-    "art_rules = { \"origin\": \"<svg xmlns=\\\"http://www.w3.org/2000/svg\\\" xmlns:xlink=\\\"http://www.w3.org/1999/xlink\\\" width=\\\"1024\\\" height=\\\"512\\\">#background##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse#</svg>\",\n",
-    "\"ellipse\":\"<ellipse cx=\\\"#cx#\\\" cy=\\\"#cy#\\\" rx=\\\"#rx#\\\" ry=\\\"50\\\" style=\\\"fill:#color#;stroke:#color#;stroke-width:2;opacity:#opacity#\\\" />\",\n",
-    "\"rx\":[\"50\",\"100\",\"150\",\"200\",\"250\",\"300\",\"350\"] ,\n",
-    "\"color\":[\"AliceBlue\",\"Aqua\",\"Aquamarine\",\"Coral\",\"Cyan\",\"Crimson\",\"DeepPink\",\"DarkCyan\",\"DeepSkyBlue\",\"FireBrick\"\n",
-    "\"Indigo\",\"SlateBlue\",\"DarkMagenta\",\"BlueViolet\",\"DarkOrchid\",\"Azure\",\"BurlyWood\",\"Bisque\",\"DarkGreen\",\"DarkSeaGreen\",\"DarkRed\",\"Fuschia\",\"IndianRed\",\"Maroon\"],\n",
-    "\"opacity\":[\"0.2\",\"0.3\",\"0.4\",\"0.5\",\"0.6\",\"0.7\"],\n",
-    "\"cx\":[\"100\",\"200\",\"300\",\"400\",\"500\",\"600\",\"700\",\"800\",\"900\"],\n",
-    "\"cy\":[\"100\",\"200\",\"300\",\"400\",\"500\"],\n",
-    "\"background\":\"<rect width=\\\"1024\\\" height=\\\"512\\\" style=\\\"fill:#backgroundcolor#\\\" />\",\n",
-    "\"backgroundcolor\":[\"black\",\"gray\",\"darkgray\"]}\n",
-    "art_grammar = tracery.Grammar(art_rules)\n",
-    "print(art_grammar.flatten(\"#origin#\")) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Next we'll build the chapter text function\n",
-    "def makeChapter(number):\n",
-    "    chapterText = \"<h2>Chapter \" + str(number) + \": \"\n",
-    "    chapterText += grammar.flatten(\"#title#\") + \"</h2>\"\n",
-    "    chapterText += \"<p>\"\n",
-    "    chapterText += \"<center>\" + art_grammar.flatten(\"#origin#\") + \"</center>\"\n",
-    "    while (len(chapterText.split(\" \")) < 5000):\n",
-    "      chapterText += \"<p>\"\n",
-    "      for i in range(random.randrange(3,9)):\n",
-    "        chapterText += text_model.make_sentence() + \" \"\n",
-    "      chapterText += \"</p>\"\n",
-    "    chapterText += \"</p><p></p>\"\n",
-    "    return chapterText"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test Chapter function\n",
-    "text_model = markovify.Text(text)\n",
-    "print(makeChapter(1)[0:500])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -226,6 +218,16 @@
     "Finally, think about the visualizations that would be most useful to sharing and exploring your data. Consider both static and dynamic approaches from the different libraries we've worked with this semester. Include at least two preliminary visualizations.\n",
     "\n",
     "(Karsdorp, Kestemont, and Riddell)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build a wordcloud of term distributions in each document (example comment)\n",
+    "# (Copy and modify code from other exercises to prototype this goal)"
    ]
   },
   {
