--- a/Assignment #14.ipynb
+++ b/Assignment #14.ipynb
@@ -211,6 +211,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is an old prototype bot of mine - you'd want to write a new Tracery program\n",
+    "art_rules = { \"origin\": \"<svg xmlns=\\\"http://www.w3.org/2000/svg\\\" xmlns:xlink=\\\"http://www.w3.org/1999/xlink\\\" width=\\\"1024\\\" height=\\\"512\\\">#background##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse##ellipse#</svg>\",\n",
+    "\"ellipse\":\"<ellipse cx=\\\"#cx#\\\" cy=\\\"#cy#\\\" rx=\\\"#rx#\\\" ry=\\\"50\\\" style=\\\"fill:#color#;stroke:#color#;stroke-width:2;opacity:#opacity#\\\" />\",\n",
+    "\"rx\":[\"50\",\"100\",\"150\",\"200\",\"250\",\"300\",\"350\"] ,\n",
+    "\"color\":[\"AliceBlue\",\"Aqua\",\"Aquamarine\",\"Coral\",\"Cyan\",\"Crimson\",\"DeepPink\",\"DarkCyan\",\"DeepSkyBlue\",\"FireBrick\"\n",
+    "\"Indigo\",\"SlateBlue\",\"DarkMagenta\",\"BlueViolet\",\"DarkOrchid\",\"Azure\",\"BurlyWood\",\"Bisque\",\"DarkGreen\",\"DarkSeaGreen\",\"DarkRed\",\"Fuschia\",\"IndianRed\",\"Maroon\"],\n",
+    "\"opacity\":[\"0.2\",\"0.3\",\"0.4\",\"0.5\",\"0.6\",\"0.7\"],\n",
+    "\"cx\":[\"100\",\"200\",\"300\",\"400\",\"500\",\"600\",\"700\",\"800\",\"900\"],\n",
+    "\"cy\":[\"100\",\"200\",\"300\",\"400\",\"500\"],\n",
+    "\"background\":\"<rect width=\\\"1024\\\" height=\\\"512\\\" style=\\\"fill:#backgroundcolor#\\\" />\",\n",
+    "\"backgroundcolor\":[\"black\",\"gray\",\"darkgray\"]}\n",
+    "art_grammar = tracery.Grammar(art_rules)\n",
+    "print(art_grammar.flatten(\"#origin#\")) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Next we'll build the chapter text function\n",
+    "def makeChapter(number):\n",
+    "    chapterText = \"<h2>Chapter \" + str(number) + \": \"\n",
+    "    chapterText += grammar.flatten(\"#title#\") + \"</h2>\"\n",
+    "    chapterText += \"<p>\"\n",
+    "    chapterText += \"<center>\" + art_grammar.flatten(\"#origin#\") + \"</center>\"\n",
+    "    while (len(chapterText.split(\" \")) < 5000):\n",
+    "      chapterText += \"<p>\"\n",
+    "      for i in range(random.randrange(3,9)):\n",
+    "        chapterText += text_model.make_sentence() + \" \"\n",
+    "      chapterText += \"</p>\"\n",
+    "    chapterText += \"</p><p></p>\"\n",
+    "    return chapterText"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test Chapter function\n",
+    "text_model = markovify.Text(text)\n",
+    "print(makeChapter(1)[0:500])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -251,23 +304,6 @@
     "    f.write(\"</body></html>\")\n",
     "f.close()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bonus Stage: \n",
-    "\n",
-    "(Karsdorp, Kestemont, and Riddell).\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
