--- a/Assignment #13.ipynb
+++ b/Assignment #13.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "review_dict = {'name':[], 'date':[], 'rating':[], 'review':[]}\n",
     "for i in range(0,39):\n",
-    "    url = 'https://www.metacritic.com/game/switch/animal-crossing-new-horizons/user-reviews?page=' + str(i)\n",
+    "    url = 'https://www.metacritic.com/game/playstation-3/the-walking-dead-a-telltale-games-series/user-reviews' + str(i)\n",
     "    user_agent = {'User-agent': 'Mozilla/5.0'}\n",
     "    response = requests.get(url, headers = user_agent)\n",
     "    soup = BeautifulSoup(response.text, 'html.parser')\n",
@@ -81,9 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [title, first_author, issue, abstract]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
    "source": [
     "ac_reviews = pd.DataFrame(review_dict)\n",
     "print(ac_reviews)"
